@startuml
    dataclass solverpy.setups.Setup {
    + sidlist : list[Sid]
    + dataname : str
    + loops : int
    ...
    --
    + launch()
    }
    circle solverpy.setups.enigma
    circle solverpy.setups.cvc5ml

   abstract class solverpy.builder.Builder {
      {abstract} + strategies : list[Sid]
      # dataname : str
      {abstract} + build()
      {abstract} + apply(sid, model) : list[Sid]
      + path() : str
   }
   
   class solverpy.builder.Enigma extends solverpy.builder.Builder {
      + build()
      + apply(..) 
   }

   class solverpy.builder.Cvc5ML extends solverpy.builder.Builder {
      + build()
      + apply(..)
   }

    solverpy.setups.Setup <-- solverpy.setups.enigma
    solverpy.setups.Setup <-- solverpy.setups.cvc5ml

    solverpy.builder.Builder "1" o-left solverpy.setups.Setup


@enduml
